--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,26 @@
       "outFiles": []
     },
     {
+      "name": "Launch1",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceRoot}/CreateDb.js",
+      "stopOnEntry": false,
+      "args": [],
+      "cwd": "${workspaceRoot}",
+      "preLaunchTask": null,
+      "runtimeExecutable": null,
+      "runtimeArgs": [
+        "--nolazy"
+      ],
+      "env": {
+        "NODE_ENV": "development"
+      },
+      "console": "internalConsole",
+      "sourceMaps": false,
+      "outFiles": []
+    },
+    {
       "name": "Attach",
       "type": "node",
       "request": "attach",
