--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
+    "errorhandler": "^1.4.3",
     "express": "~4.13.4",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.5",
